# HyperLoom

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
doc/: Makefile
doc/source/: api-py-client.rst  client-py.rst  conf.py  extending.rst  index.rst  install.rst  intro.rst
pb/: CMakeLists.txt  comm.proto  loomcomm.proto  loomplan.proto  rebuild.sh  run.proto
python/: MANIFEST.in  generate.sh  requirements.txt  setup.py
python/loom/client/: __init__.py  client.py  connection.py  errors.py  future.py  plan.py  planbuilder.py  task.py  tasks.py
python/loom/client/wait/: __main__.py
python/loom/lore/: __main__.py  html.py  lore.py  report.py
python/loom/pb/: loomcomm_pb2.py  loomplan_pb2.py  loomreport_pb2.py
python/loom/rview/: __main__.py  report.py  rview.py
python/loom/wep/: call.py
python/loom/wside/: core.py
src/: CMakeLists.txt  loom_define.h.in
src/client/: __init__.py  client.py  gv.py  loomcomm_pb2.py  loomplan_pb2.py  loomreport_pb2.py  loomrun_pb2.py  plan.py  planbuilder.py
src/libloom/: CMakeLists.txt  compat.h  config.cpp  config.h  connection.cpp  connection.h  data.cpp  data.h  databuilder.cpp  databuilder.h  dictionary.cpp  dictionary.h  fileservice.cpp  fileservice.h  fsutils.cpp  fsutils.h  interconnect.cpp  interconnect.h  listener.cpp  listener.h  log.cpp  log.h  loomcomm.pb.cc  loomcomm.pb.h  loomplan.pb.cc  loomplan.pb.h  pbutils.cpp  pbutils.h  rawdata.cpp  rawdata.h  sendbuffer.cpp  sendbuffer.h  socket.cpp  socket.h  task.cpp  task.h  taskfactory.h  taskinstance.cpp  taskinstance.h  trace.cpp  (+10 more)
src/libloom/data/: array.cpp  array.h  externfile.cpp  externfile.h  index.cpp  index.h  rawdata.cpp  rawdata.h
src/libloom/tasks/: arraytasks.cpp  arraytasks.h  basetasks.cpp  basetasks.h  python.cpp  python.h  python_wrapper.cpp  python_wrapper.h  rawdatatasks.cpp  rawdatatasks.h  runtask.cpp  runtask.h
src/libloomnet/: CMakeLists.txt  listener.cpp  listener.h  log.cpp  log.h  pbutils.cpp  pbutils.h  sendbuffer.cpp  sendbuffer.h  socket.cpp  socket.h
src/libloomw/: CMakeLists.txt  checkpointwriter.cpp  checkpointwriter.h  config.cpp  config.h  data.cpp  data.h  dictionary.cpp  globals.cpp  globals.h  interconnect.cpp  interconnect.h  log.cpp  log.h  loomcomm.pb.h  loomplan.pb.cc  main.cpp  resalloc.cpp  resalloc.h  resourcem.cpp  resourcem.h  task.cpp  task.h  taskdesc.h  taskfactory.h  taskinstance.cpp  taskinstance.h  threadjob.cpp  threadjob.h  ttinstance.h  types.h  unpacking.cpp  unpacking.h  utils.cpp  utils.h  worker.cpp  worker.h  wtrace.cpp  wtrace.h
src/libloomw/data/: array.cpp  array.h  externfile.cpp  externfile.h  index.cpp  index.h  pyobj.cpp  pyobj.h  rawdata.cpp  rawdata.h
src/libloomw/python/: core.cpp  core.h  data_wrapper.cpp  data_wrapper.h  module.cpp  module.h
src/libloomw/tasks/: arraytasks.cpp  arraytasks.h  basetasks.cpp  basetasks.h  python.cpp  python.h  python_module.cpp  python_module.h  python_wrapper.cpp  python_wrapper.h  rawdatatasks.cpp  rawdatatasks.h  runtask.cpp  runtask.h
src/proto/: loomcomm.proto  loomplan.proto  loomreport.proto  loomrun.proto  rebuild.sh
src/rview/: report.py  rview.py
src/server/: CMakeLists.txt  clientconn.cpp  clientconn.h  compstate.cpp  compstate.h  dummyworker.cpp  dummyworker.h  freshconn.cpp  freshconn.h  main.cpp  plan.cpp  plan.h  plannode.cpp  plannode.h  resendtask.cpp  resendtask.h  scheduler.cpp  scheduler.h  server.cpp  server.h  solver.cpp  solver.h  taskmanager.cpp  taskmanager.h  tasknode.cpp  tasknode.h  taskstate.cpp  taskstate.h  trace.cpp  trace.h  workerconn.cpp  workerconn.h
src/worker/: CMakeLists.txt  arraytasks.cpp  arraytasks.h  basictasks.cpp  basictasks.h  loomrun.pb.cc  loomrun.pb.h  main.cpp  rawdatatasks.cpp  rawdatatasks.h  runtask.cpp  runtask.h
tests/: CMakeLists.txt
tests/client/: array_test.py  cv_test.py  data_test.py  dslice_test.py  fail_test.py  loom_test.py  loomenv.py  py_test.py  test_array.py  test_checkpoint.py  test_client.py  test_cv.py  test_data.py  test_dslice.py  test_fail.py  test_index.py  test_py.py  test_run.py  testprog.py
tests/client/testdata/: file2
tests/cpp/: CMakeLists.txt  main.cpp  test_resourcem.cpp  test_scheduler.cpp
tests/server/: CMakeLists.txt  scheduler.cpp  test_scheduler.cpp
